fix overflow page

--- a/13-stripe-submenus/src/index.css
+++ b/13-stripe-submenus/src/index.css
@@ -65,6 +65,10 @@ body {
   font-size: 0.875rem;
 }
 
+html {
+  overflow: hidden;
+}
+
 ul {
   list-style-type: none;
 }
